objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>LeadingBusiness__c</fullName>
        <description>SR0</description>
        <inlineHelpText>SE Business Unit which is in charge of managing the opportunity and project through its phases until completion.</inlineHelpText>
        <label>Leading BU (Opportunity)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BD</fullName>
                    <color>#F3D904</color>
                    <label>BD</label>
                </value>
                <value>
                    <fullName>PS</fullName>
                    <color>#33CCFA</color>
                    <label>PS</label>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                    <color>#78C953</color>
                    <label>ID</label>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                    <color>#CC0000</color>
                    <label>EN</label>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                    <color>#FF9900</color>
                    <label>IT</label>
                </value>
                <value>
                    <fullName>GW</fullName>
                </value>
                <value>
                    <fullName>SO</fullName>
                </value>
                <value>
                    <fullName>BU</fullName>
                    <isActive>false</isActive>
                    <label>BU</label>
                </value>
                <value>
                    <fullName>Buildings</fullName>
                    <isActive>false</isActive>
                    <label>Buildings</label>
                </value>
                <value>
                    <fullName>CB</fullName>
                    <isActive>false</isActive>
                    <label>CB</label>
                </value>
                <value>
                    <fullName>COP</fullName>
                    <isActive>false</isActive>
                    <label>COP</label>
                </value>
                <value>
                    <fullName>EcoBuildings</fullName>
                    <isActive>false</isActive>
                    <label>EcoBuildings</label>
                </value>
                <value>
                    <fullName>Energy</fullName>
                    <isActive>false</isActive>
                    <label>Energy</label>
                </value>
                <value>
                    <fullName>Energy &amp; Partner</fullName>
                    <isActive>false</isActive>
                    <label>Energy &amp; Partner</label>
                </value>
                <value>
                    <fullName>FIN</fullName>
                    <isActive>false</isActive>
                    <label>FIN</label>
                </value>
                <value>
                    <fullName>FLS</fullName>
                    <isActive>false</isActive>
                    <label>FLS</label>
                </value>
                <value>
                    <fullName>GC</fullName>
                    <isActive>false</isActive>
                    <label>GC</label>
                </value>
                <value>
                    <fullName>GOP</fullName>
                    <isActive>false</isActive>
                    <label>GOP</label>
                </value>
                <value>
                    <fullName>GS</fullName>
                    <isActive>false</isActive>
                    <label>GS</label>
                </value>
                <value>
                    <fullName>GSC</fullName>
                    <isActive>false</isActive>
                    <label>GSC</label>
                </value>
                <value>
                    <fullName>Global Operations</fullName>
                    <isActive>false</isActive>
                    <label>Global Operations</label>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                    <isActive>false</isActive>
                    <label>Hardware</label>
                </value>
                <value>
                    <fullName>IN</fullName>
                    <isActive>false</isActive>
                    <label>IN</label>
                </value>
                <value>
                    <fullName>IND</fullName>
                    <isActive>false</isActive>
                    <label>IND</label>
                </value>
                <value>
                    <fullName>ITB</fullName>
                    <isActive>false</isActive>
                    <label>ITB</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LocalOpptyName__c</fullName>
        <description>SR0</description>
        <inlineHelpText>Opportunity Name in local language</inlineHelpText>
        <label>Local Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>SR0</description>
        <externalId>true</externalId>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketSegment__c</fullName>
        <description>SR0 - Picklist to store opportunity main market segment</description>
        <label>Market Segment (Opportunity)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BD1</fullName>
                </value>
                <value>
                    <fullName>BD3</fullName>
                </value>
                <value>
                    <fullName>BD4</fullName>
                </value>
                <value>
                    <fullName>BD6</fullName>
                </value>
                <value>
                    <fullName>BD9</fullName>
                </value>
                <value>
                    <fullName>BDR</fullName>
                </value>
                <value>
                    <fullName>BDZ</fullName>
                </value>
                <value>
                    <fullName>EN1</fullName>
                </value>
                <value>
                    <fullName>EN2</fullName>
                </value>
                <value>
                    <fullName>EN3</fullName>
                </value>
                <value>
                    <fullName>ID1</fullName>
                </value>
                <value>
                    <fullName>ID2</fullName>
                </value>
                <value>
                    <fullName>ID3</fullName>
                </value>
                <value>
                    <fullName>ID4</fullName>
                </value>
                <value>
                    <fullName>ID5</fullName>
                </value>
                <value>
                    <fullName>ID6</fullName>
                </value>
                <value>
                    <fullName>ID7</fullName>
                </value>
                <value>
                    <fullName>IDZ</fullName>
                </value>
                <value>
                    <fullName>IT1</fullName>
                </value>
                <value>
                    <fullName>IT2</fullName>
                </value>
                <value>
                    <fullName>IT3</fullName>
                </value>
                <value>
                    <fullName>PW1</fullName>
                </value>
                <value>
                    <fullName>PW3</fullName>
                </value>
                <value>
                    <fullName>--None--</fullName>
                    <isActive>false</isActive>
                    <label>--None--</label>
                </value>
                <value>
                    <fullName>0</fullName>
                    <isActive>false</isActive>
                    <label>0</label>
                </value>
                <value>
                    <fullName>Airport</fullName>
                    <isActive>false</isActive>
                    <label>Airport</label>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                    <isActive>false</isActive>
                    <label>Automotive</label>
                </value>
                <value>
                    <fullName>Automotive &amp; E-Mobility</fullName>
                    <isActive>false</isActive>
                    <label>Automotive &amp; E-Mobility</label>
                </value>
                <value>
                    <fullName>B11</fullName>
                    <isActive>false</isActive>
                    <label>B11</label>
                </value>
                <value>
                    <fullName>B14</fullName>
                    <isActive>false</isActive>
                    <label>B14</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarketSubSegment__c</fullName>
        <description>SR0 - This picklist depends on Market Segment</description>
        <label>Market Sub-Segment (Opportunity)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MarketSegment__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B15</fullName>
                </value>
                <value>
                    <fullName>B16</fullName>
                </value>
                <value>
                    <fullName>B17</fullName>
                </value>
                <value>
                    <fullName>B18</fullName>
                </value>
                <value>
                    <fullName>B19</fullName>
                </value>
                <value>
                    <fullName>B20</fullName>
                </value>
                <value>
                    <fullName>B37</fullName>
                </value>
                <value>
                    <fullName>B38</fullName>
                </value>
                <value>
                    <fullName>B39</fullName>
                </value>
                <value>
                    <fullName>B41</fullName>
                </value>
                <value>
                    <fullName>B42</fullName>
                </value>
                <value>
                    <fullName>B43</fullName>
                </value>
                <value>
                    <fullName>B44</fullName>
                </value>
                <value>
                    <fullName>B45</fullName>
                </value>
                <value>
                    <fullName>B46</fullName>
                </value>
                <value>
                    <fullName>B47</fullName>
                </value>
                <value>
                    <fullName>B48</fullName>
                </value>
                <value>
                    <fullName>B49</fullName>
                </value>
                <value>
                    <fullName>B4A</fullName>
                </value>
                <value>
                    <fullName>B4B</fullName>
                </value>
                <value>
                    <fullName>B51</fullName>
                </value>
                <value>
                    <fullName>B52</fullName>
                </value>
                <value>
                    <fullName>B53</fullName>
                </value>
                <value>
                    <fullName>B55</fullName>
                </value>
                <value>
                    <fullName>B56</fullName>
                </value>
                <value>
                    <fullName>B57</fullName>
                </value>
                <value>
                    <fullName>B90</fullName>
                </value>
                <value>
                    <fullName>B91</fullName>
                </value>
                <value>
                    <fullName>B92</fullName>
                </value>
                <value>
                    <fullName>B93</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MixBusinessOpptyNbr__c</fullName>
        <description>technical field needed for reports</description>
        <formula>IF(IF(INCLUDES(BusinessMix__c,&quot;BD&quot;),1,0) + 
IF(INCLUDES(BusinessMix__c,&quot;EN&quot;), 1, 0) + 
IF(INCLUDES(BusinessMix__c,&quot;GC&quot;), 1, 0) + 
IF(INCLUDES(BusinessMix__c,&quot;GW&quot;), 1, 0) + 
IF(INCLUDES(BusinessMix__c,&quot;ID&quot;), 1, 0) + 
IF(INCLUDES(BusinessMix__c,&quot;IT&quot;), 1, 0) + 
IF(INCLUDES(BusinessMix__c,&quot;PE&quot;), 1, 0) + 
IF(INCLUDES(BusinessMix__c,&quot;PP&quot;), 1, 0) + 
IF(INCLUDES(BusinessMix__c,&quot;PR&quot;), 1, 0) + 
IF(INCLUDES(BusinessMix__c,&quot;PS&quot;), 1, 0) + 
IF(INCLUDES(BusinessMix__c,&quot;BI&quot;), 1, 0)&gt;1,1,0)</formula>
        <label>Is a cross selling (Old rule) ?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewtonBidId__c</fullName>
        <externalId>true</externalId>
        <label>SE Advantage Proposal Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NewtonBidLink__c</fullName>
        <formula>If( NewtonBidId__c !=null,Hyperlink( $Label.CLR117SLS006 + NewtonBidSalesforceId__c, NewtonBidId__c ) ,&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SE Advantage Proposal Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewtonBidSalesforceId__c</fullName>
        <label>SE Advantage Proposal Salesforce Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewtonSynchronizationMessage__c</fullName>
        <defaultValue>$Label.CLOCT18SLS05</defaultValue>
        <label>SE Advantage Synchronization Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <formula>&quot;NOTE : Opportunity MUST be on Stage \&quot;Won\&quot; and the Order  in the hands of your sales representative 5 working days before existing Agreement or Warranty Expiration.&quot;</formula>
        <label>&amp;nbsp;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OdasevaArchivedCaseId__c</fullName>
        <description>This field is used by Odaseva archiving solution in order to store the case id of archived cases. Required in 18-char format</description>
        <externalId>true</externalId>
        <label>OdasevaArchivedCaseId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OdasevaArchivedCaseNumber__c</fullName>
        <label>OdasevaArchivedCaseNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OdasevaArchivedCaseURL__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(OdasevaArchivedCaseId__c)),NOT(ISBLANK(OdasevaArchivedCaseNumber__c))),HYPERLINK($Label.OdasevaArchivedCaseUrlPrefix &amp; OdasevaArchivedCaseId__c, OdasevaArchivedCaseNumber__c),&quot;No archived case to display&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Odaseva Archived Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppGroupSolutionArchitectEmail__c</fullName>
        <description>Copy of &quot;Group Solution Architect email&quot; field value from Accounts object</description>
        <label>Group Solution Architect email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OppNamingConvention__c</fullName>
        <defaultValue>&quot;Project Name - Location - Account Name - End user &quot; &amp; BR() &amp; &quot; e.g.: Praha Airport - Praha - Lendl Contracting - Airport Authority&quot;</defaultValue>
        <description>SR0 - Instead of having an Help Text, naming convention has to be directly displayed on the Opportunity Page.</description>
        <label>Opportunity Naming Convention</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OppScopeAttribute__c</fullName>
        <description>MARCH 2012 RELEASE - Opportunity Scope Attributes</description>
        <inlineHelpText>Capture if the opportunity is related to these attributes to allow us to monitor key strategic selling areas/ teams</inlineHelpText>
        <label>Opportunity Scope Attribute</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ASCO/Schneider Cross Sell</fullName>
                </value>
                <value>
                    <fullName>Commercial &amp; Industrial</fullName>
                </value>
                <value>
                    <fullName>Connectivity EcoSystem</fullName>
                </value>
                <value>
                    <fullName>Cross-Selling with Invensys</fullName>
                </value>
                <value>
                    <fullName>Datacenter</fullName>
                </value>
                <value>
                    <fullName>Distributed IT</fullName>
                </value>
                <value>
                    <fullName>EcoStruxure Building</fullName>
                </value>
                <value>
                    <fullName>EcoStruxure Grid</fullName>
                </value>
                <value>
                    <fullName>EcoStruxure IT</fullName>
                </value>
                <value>
                    <fullName>EcoStruxure Machine</fullName>
                </value>
                <value>
                    <fullName>EcoStruxure Plant</fullName>
                </value>
                <value>
                    <fullName>EcoStruxure Power</fullName>
                </value>
                <value>
                    <fullName>Eurotherm</fullName>
                </value>
                <value>
                    <fullName>Green/Energy Efficient Building</fullName>
                </value>
                <value>
                    <fullName>Microgrid</fullName>
                </value>
                <value>
                    <fullName>Service Dependent</fullName>
                </value>
                <value>
                    <fullName>Smart City</fullName>
                </value>
                <value>
                    <fullName>Solar</fullName>
                </value>
                <value>
                    <fullName>Supplier B2B Initiative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityCategory__c</fullName>
        <description>SR0</description>
        <label>Opportunity Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Master</fullName>
                </value>
                <value>
                    <fullName>Object</fullName>
                </value>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Einfach</fullName>
                    <isActive>false</isActive>
                    <label>Einfach</label>
                </value>
                <value>
                    <fullName>SOLUTION</fullName>
                    <isActive>false</isActive>
                    <label>SOLUTION</label>
                </value>
                <value>
                    <fullName>Semplice</fullName>
                    <isActive>false</isActive>
                    <label>Semplice</label>
                </value>
                <value>
                    <fullName>Simples</fullName>
                    <isActive>false</isActive>
                    <label>Simples</label>
                </value>
                <value>
                    <fullName>Standard</fullName>
                    <isActive>false</isActive>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Простой</fullName>
                    <isActive>false</isActive>
                    <label>Простой</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityDetector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Opportunity Detector will ensure that the correct resource receives credit for identifying the Opportunity (mainly for lead &amp; service teams).</inlineHelpText>
        <label>Opportunity Detector</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpportunityEcoStruxureDomain__c</fullName>
        <label>Opportunity EcoStruxure Domain</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EBD</fullName>
                </value>
                <value>
                    <fullName>EGD</fullName>
                </value>
                <value>
                    <fullName>EIT</fullName>
                </value>
                <value>
                    <fullName>EMH</fullName>
                </value>
                <value>
                    <fullName>EPL</fullName>
                </value>
                <value>
                    <fullName>EPW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityLedbyPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>APRIL RELEASE - Flag to identify if an Opportunity is led by a Partner.</description>
        <label>Opportunity Led by Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityNotification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Notification</label>
        <referenceTo>OpportunityNotification__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpportunityScope__c</fullName>
        <description>SR0
For standard opportunity, select the main product line.</description>
        <inlineHelpText>For standard opportunity, select the main product line.</inlineHelpText>
        <label>Suspected Scope</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OpptyType__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BDADS</fullName>
                </value>
                <value>
                    <fullName>BDBMS</fullName>
                </value>
                <value>
                    <fullName>BDSEC</fullName>
                </value>
                <value>
                    <fullName>BDSL3</fullName>
                </value>
                <value>
                    <fullName>CLSAS</fullName>
                </value>
                <value>
                    <fullName>ESEEP</fullName>
                </value>
                <value>
                    <fullName>ESEPC</fullName>
                </value>
                <value>
                    <fullName>ESMON</fullName>
                </value>
                <value>
                    <fullName>ESSMS</fullName>
                </value>
                <value>
                    <fullName>IDADS</fullName>
                </value>
                <value>
                    <fullName>IDCOM</fullName>
                </value>
                <value>
                    <fullName>IDEUR</fullName>
                </value>
                <value>
                    <fullName>IDFLD</fullName>
                </value>
                <value>
                    <fullName>IDHMI</fullName>
                </value>
                <value>
                    <fullName>IDIBO</fullName>
                </value>
                <value>
                    <fullName>IDMST</fullName>
                </value>
                <value>
                    <fullName>IDOL2</fullName>
                </value>
                <value>
                    <fullName>IDPAC</fullName>
                </value>
                <value>
                    <fullName>IDPAS</fullName>
                </value>
                <value>
                    <fullName>IDPSO</fullName>
                </value>
                <value>
                    <fullName>IDSDS</fullName>
                </value>
                <value>
                    <fullName>IDSEN</fullName>
                </value>
                <value>
                    <fullName>IDSIG</fullName>
                </value>
                <value>
                    <fullName>IDSL3</fullName>
                </value>
                <value>
                    <fullName>IDVSD</fullName>
                </value>
                <value>
                    <fullName>INADS</fullName>
                </value>
                <value>
                    <fullName>INENP</fullName>
                </value>
                <value>
                    <fullName>INENS</fullName>
                </value>
                <value>
                    <fullName>INIBS</fullName>
                </value>
                <value>
                    <fullName>INMCP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunitySource__c</fullName>
        <description>SR0</description>
        <inlineHelpText>It shows the lead we had or received for this opportunity (either from direct marketing or event, campaign, etc).</inlineHelpText>
        <label>Opportunity Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>Call - Inbound</fullName>
                </value>
                <value>
                    <fullName>Call-Inbound</fullName>
                    <isActive>false</isActive>
                    <label>Call-Inbound</label>
                </value>
                <value>
                    <fullName>Call - Outbound</fullName>
                </value>
                <value>
                    <fullName>Campagna</fullName>
                    <isActive>false</isActive>
                    <label>Campagna</label>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Chamada - Inbound</fullName>
                    <isActive>false</isActive>
                    <label>Chamada - Inbound</label>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Contract Renewal</fullName>
                </value>
                <value>
                    <fullName>Customer Event</fullName>
                </value>
                <value>
                    <fullName>Customer phone call</fullName>
                </value>
                <value>
                    <fullName>Customer Referral</fullName>
                </value>
                <value>
                    <fullName>Customer Request</fullName>
                </value>
                <value>
                    <fullName>Customer Visit</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>DOF</fullName>
                    <label>Digital Opportunity Factory</label>
                </value>
                <value>
                    <fullName>Direct Marketing</fullName>
                </value>
                <value>
                    <fullName>Energy Audit</fullName>
                    <isActive>false</isActive>
                    <label>Energy Audit</label>
                </value>
                <value>
                    <fullName>Energy Bureau</fullName>
                    <isActive>false</isActive>
                    <label>Energy Bureau</label>
                </value>
                <value>
                    <fullName>Energy Efficiency Audit</fullName>
                    <isActive>false</isActive>
                    <label>Energy Efficiency Audit</label>
                </value>
                <value>
                    <fullName>Event - Customer</fullName>
                </value>
                <value>
                    <fullName>Event - Schneider</fullName>
                </value>
                <value>
                    <fullName>Expired Warranty</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Parceiro</fullName>
                    <isActive>false</isActive>
                    <label>Parceiro</label>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Procurement Contract</fullName>
                    <isActive>false</isActive>
                    <label>Procurement Contract</label>
                </value>
                <value>
                    <fullName>Procurement Contract Renewal</fullName>
                    <isActive>false</isActive>
                    <label>Procurement Contract Renewal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityTerritory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>November2012</description>
        <label>Opportunity Territory</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>SE_Territory__c.TECH_For_ASCO__c</field>
                <operation>notEqual</operation>
                <value>ASCO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SE_Territory__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_VIPIcon__c</fullName>
        <formula>IF( 
OR(ISPICKVAL( Account.Account_VIPFlag__c ,&quot;VIP1&quot;), ISPICKVAL(EndUserCustomer__r.Account_VIPFlag__c ,&quot;VIP1&quot;),
ISPICKVAL( FinalCustSiteAcc__r.Account_VIPFlag__c ,&quot;VIP1&quot;)),
IMAGE(&quot;/resource/STR_ACC_VIPGold&quot;,&quot;VIP Gold&quot;,20,31), 

IF( 
OR(
ISPICKVAL(Account.Account_VIPFlag__c,&quot;VIP2&quot;),
ISPICKVAL(EndUserCustomer__r.Account_VIPFlag__c ,&quot;VIP2&quot;),
ISPICKVAL(FinalCustSiteAcc__r.Account_VIPFlag__c ,&quot;VIP2&quot;)),
IMAGE(&quot;/resource/STR_ACC_VIPSilver&quot;,&quot;VIP Silver&quot;,20,31), 


IF( 
OR(
ISPICKVAL(Account.Account_VIPFlag__c,&quot;VIP3&quot;),
ISPICKVAL(EndUserCustomer__r.Account_VIPFlag__c ,&quot;VIP3&quot;),
ISPICKVAL(FinalCustSiteAcc__r.Account_VIPFlag__c ,&quot;VIP3&quot;)),
IMAGE(&quot;/resource/STR_ACC_VIPBronze &quot;,&quot;VIP Bronze&quot;,20,31), 

IF( 
OR(
ISPICKVAL(Account.Account_VIPFlag__c,&quot;VIP4&quot;),
ISPICKVAL(EndUserCustomer__r.Account_VIPFlag__c ,&quot;VIP4&quot;),
ISPICKVAL(FinalCustSiteAcc__r.Account_VIPFlag__c ,&quot;VIP4&quot;)),
IMAGE(&quot;/resource/VIPOEM &quot;,&quot;VIP OEM&quot;,20,31), 

IF( 
OR(
ISPICKVAL(Account.Account_VIPFlag__c,&quot;VIP5&quot;),
ISPICKVAL(EndUserCustomer__r.Account_VIPFlag__c ,&quot;VIP5&quot;),
ISPICKVAL(FinalCustSiteAcc__r.Account_VIPFlag__c ,&quot;VIP5&quot;)),
IMAGE(&quot;/resource/VIPCTA &quot;,&quot;VIP CTA&quot;,20,31), 


IF( 
OR(
ISPICKVAL(Account.Account_VIPFlag__c,&quot;VIP6&quot;),
ISPICKVAL(EndUserCustomer__r.Account_VIPFlag__c ,&quot;VIP6&quot;),
ISPICKVAL(FinalCustSiteAcc__r.Account_VIPFlag__c ,&quot;VIP6&quot;)),
IMAGE(&quot;/resource/VIPMCTA &quot;,&quot;VIP MCTA&quot;,20,31), &quot;&quot;
)
)
)
)
)
)</formula>
        <label>&lt;VIPIcon&gt;</label>
        <type>Text</type>
    </fields>
</CustomObject>